完善日期显示，完善ui